--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ header {
     text-decoration: none;
     border-radius: 5px;
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 820px) {
     .hamburger {
         display: block;
         font-size: 30px;
@@ -170,7 +171,7 @@ header {
         color: #ff9900;
         padding: 10px;
         transition: transform 0.3s ease;
-        margin-left: -100px
+        margin-left: -100px;
     }
 
     #navMenu {
@@ -232,6 +233,8 @@ header {
         background-color: rgba(255, 255, 255, 0.2);
         color: #ffffff; 
     }
+}
+@media screen and (max-width: 768px) {
     html, body {
         margin: 0;
         padding: 0;
@@ -321,75 +324,6 @@ header {
 }
 
 @media screen and (max-width: 430px) {
-    .hamburger {
-        display: block;
-        font-size: 30px;
-        cursor: pointer;
-        color: #ff9900;
-        padding: 10px;
-        transition: transform 0.3s ease;
-        margin-left: -100px
-    }
-
-    #navMenu {
-        display: none;
-        flex-direction: column;
-        background-color: rgba(44, 44, 44, 0.9);
-        position: absolute;
-        top: 100%;
-        left: -120px; 
-        transform: translateX(-30%); 
-        min-width: 200px;
-        max-width: 70%; 
-        z-index: 3;
-        border-radius: 15px;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        overflow: hidden;
-        transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
-        opacity: 0; 
-        max-height: 0; 
-    }
-    
-    .hamburger-container:hover #navMenu,
-    .hamburger-container:focus-within #navMenu {
-        display: flex;
-        max-height: 500px; 
-        opacity: 1;
-    }
-
-    .navbar nav ul {
-        flex-direction: column;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    .navbar nav ul li {
-        margin: 0;
-        max-width: 100%;
-        padding: 10px 10px;
-        text-align: center;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .navbar nav ul li:last-child {
-        border-bottom: none;
-    }
-
-    .navbar nav ul li a {
-        width: 100%;
-        margin-left: -12px;
-        display: block;
-        color: #ffffff;
-        text-decoration: none;
-        font-weight: bold;
-        transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    .navbar nav ul li a:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: #ffffff; 
-    }
     html, body {
         margin: 0;
         padding: 0;
@@ -440,7 +374,11 @@ header {
         text-decoration: none;
         font-size: 0.6rem;
         transition: transform 0.3s ease, background-color 0.3s ease; 
-        margin-right: 30%;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 25%;
     }
     
     .hero a.btn:hover {
