--- a/css/understandingStyle.css
+++ b/css/understandingStyle.css
@@ -37,12 +37,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center; 
-    padding: 0 20%; 
-    min-height: 100vh;
-    box-sizing: border-box; 
-    margin-bottom: 0;
-    overflow-y: auto; 
+    text-align: center;
+    min-height: 55vh;
+    box-sizing: border-box;
+    margin-top: 3%;
+    overflow-y: auto;
     position: relative;
     z-index: 1;
 }
@@ -231,28 +230,6 @@
 
 /* --- Responsive Adjustments --- */
 
-@media screen and (max-width: 1024px) {
-    .hero-poverty {
-        padding: 0 10%; 
-    }
-    .hero-content {
-        margin-top: 0px;
-    }
-    .hero-poverty h1 {
-        font-size: 3rem;
-        margin-top: -70px;
-    }
-    .hero-poverty .info-points {
-        font-size: 1.1rem;
-    }
-    .statistics h2 {
-        font-size: 2rem;
-    }
-    .effect-box {
-        width: 90%;
-    }
-}
-
 @media screen and (max-width: 820px) {
     .hamburger {
         display: block;
@@ -351,7 +328,7 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 430px) {
     .hero-poverty {
         padding: 0 5%; 
         align-items: flex-start;
@@ -361,7 +338,6 @@
     }
     .hero-poverty h1 {
         font-size: 2rem;
-        margin-top: 0;
         margin-bottom: 10px;
     }
     .hero-poverty .info-points {
@@ -375,6 +351,10 @@
     .stat-box {
         width: 100%;
         height: auto;
+    }
+    .hero a.btn:hover {
+        width: 100%;
+        background-color: #ff9900;
     }
     .effect-box {
         width: 100%;
